# black-widow-core-rust

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml
bindings/common/: Card.ts  CardSuit.ts  GameSettings.ts  InputCard.ts  Lobby.ts  RoundInProgressState.ts
bindings/payload/: CardExchangePayload.ts  CreateLobbyPayload.ts  IdPayload.ts  PlaceCardPayload.ts  WebSocketPayload.ts
bindings/response/: CardExchangeState.ts  ErrorResponse.ts  GameDetailsResponse.ts  GameListResponse.ts  LobbyDetailsResponse.ts  LobbyListResponse.ts  WebSocketResponse.ts
game/: Cargo.toml
game/src/: card.rs  error.rs  game.rs  helper.rs  lib.rs  payload.rs  step.rs  trait.rs
game/src/step/: card_exchange.rs  round_finished.rs  round_in_progress.rs
src/: main.rs
ui/: package.json  tsconfig.json
ui/src/: game-types.ts  main.tsx  router.tsx
ui/src/src/components/card/: index.tsx
ui/src/src/config/: consts.ts  routes.ts
ui/src/src/router/: index.tsx
ui/src/src/store/: hooks.tsx  index.ts
ui/src/src/utils/: construct-sx-styles.ts  cookies.ts  get-card-path.ts
ui/src/src/views/: home.tsx  login.tsx
websocket/: Cargo.toml
websocket/bindings/: CardExchangePayload.ts  CardExchangeState.ts  CardSuit.ts  ClaimReadinessPayload.ts  GameDetailsResponse.ts  GameListResponse.ts  IdResponse.ts  ListedGame.ts  LobbyDetailsResponse.ts  LobbyListResponse.ts  ObfuscatedGame.ts  PlaceCardPayload.ts  RoundFinishedState.ts  RoundInProgressState.ts  WebSocketResponse.ts
websocket/src/: error.rs  game_action.rs  handler.rs  helper.rs  lib.rs  lobby.rs  network.rs  payload.rs  response.rs  timeout.rs
(+11 files in other folders)
