[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = { path = "../game" }
axum = { version = "0.7.4", features = ["ws"] }
tokio = {version = "1.35.1", features = ["full"]}
futures = "0.3.30"