[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = { path = "../game" }
axum = { version = "0.7.4", features = ["ws"] }
tokio = {version = "1.35.1", features = ["full"]}
futures = "0.3.30"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
uuid = { version = "1.7.0" , features = ["v4"]}