[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = { path = "../game" }
axum = { version = "0.7.4", features = ["ws"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
tokio = {version = "1.35.1", features = ["full"]}
futures = "0.3.30"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
ts-rs = {version = "7.1.1", features = ["uuid-impl"]}
uuid = { version = "1.7.0" , features = ["v4", "serde"]}
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8.5"